force-app/main/default/objects/KimbleOne__ExpenseClaim__c/KimbleOne__ExpenseClaim__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Expense Claim</label>
    <nameField>
        <label>Expense Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>