force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__ActualApprover2User__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualApprover2User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExpenseClaimsActualApprover2User</relationshipName>
    <type>Lookup</type>
</CustomField>