force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__IntInvCcyTotalExpenseInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyTotalExpenseInternalRevenue__c</fullName>
    <label>Total Expense Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>