force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__ReimbursementCcyTotalReimbursementAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReimbursementCcyTotalReimbursementAmount__c</fullName>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>