force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__ResourcePayment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcePayment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Payment</label>
    <referenceTo>KimbleOne__ResourcePayment__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>ExpenseClaims</relationshipName>
    <type>Lookup</type>
</CustomField>