force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__Source__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseClaimSource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Claims (Source)</relationshipLabel>
    <relationshipName>ExpenseClaimSource</relationshipName>
    <type>Lookup</type>
</CustomField>