force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__TotalExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalExpenseCost__c</fullName>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>