force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__TotalExpenseInternalCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalExpenseInternalCost__c</fullName>
    <label>Total Expense Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>