force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__TotalExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalExpenseRevenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>