force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__TotalReimbursementAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalReimbursementAmount__c</fullName>
    <label>Total Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>