force-app/main/default/objects/KimbleOne__ExpenseClaim__c/fields/KimbleOne__TravelRequisition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelRequisition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Requisition</label>
    <referenceTo>KimbleOne__TravelRequisition__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>ExpenseClaims</relationshipName>
    <type>Lookup</type>
</CustomField>