force-app/main/default/objects/KimbleOne__ExpenseClaim__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>KimbleOne__ApprovedDate__c</columns>
    <columns>KimbleOne__ForecastingTimePeriod__c</columns>
    <columns>KimbleOne__ReimbursementCurrencyIsoCode__c</columns>
    <columns>KimbleOne__ReimbursementCcyTotalReimbursementAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>