force-app/main/default/objects/KimbleOne__ExpenseClaim__c/listViews/KimbleOne__ApprovedExpenses.listView-meta.xml
<ListView>
    <fullName>KimbleOne__ApprovedExpenses</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__ApprovedDate__c</columns>
    <columns>KimbleOne__TotalReimbursementAmount__c</columns>
    <columns>KimbleOne__TotalExpenseRevenue__c</columns>
    <columns>KimbleOne__InvoicingCurrencyTotalExpenseRevenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Expenses</label>
    <language>en_US</language>
</ListView>