force-app/main/default/objects/KimbleOne__ExpenseClaim__c/listViews/KimbleOne__ExpensesPendingApproval.listView-meta.xml
<ListView>
    <fullName>KimbleOne__ExpensesPendingApproval</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__TotalReimbursementAmount__c</columns>
    <columns>KimbleOne__Approver1User__c</columns>
    <columns>KimbleOne__Approver2User__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>KimbleOne__ReimbursementCurrencyIsoCode__c</columns>
    <columns>KimbleOne__ReimbursementCcyTotalReimbursementAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>ReadyForApproval</value>
    </filters>
    <label>Expenses Pending Approval</label>
    <language>en_US</language>
</ListView>