force-app/main/default/objects/KimbleOne__ExpenseClaim__c/listViews/KimbleOne__MyDraftClaims.listView-meta.xml
<ListView>
    <fullName>KimbleOne__MyDraftClaims</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ReimbursementCurrencyIsoCode__c</columns>
    <columns>KimbleOne__ReimbursementCcyTotalReimbursementAmount__c</columns>
    <columns>KimbleOne__Approver1User__c</columns>
    <columns>KimbleOne__Approver2User__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>KimbleOne__ApprovalComments__c</columns>
    <columns>KimbleOne__ApprovedDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>My Draft Claims</label>
    <language>en_US</language>
</ListView>