force-app/main/default/objects/KimbleOne__ExpenseClaim__c/listViews/KimbleOne__MyPaidClaims.listView-meta.xml
<ListView>
    <fullName>KimbleOne__MyPaidClaims</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ReimbursementCurrencyIsoCode__c</columns>
    <columns>KimbleOne__ReimbursementCcyTotalReimbursementAmount__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__ResourcePayment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>KimbleOne__Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>My Paid Claims</label>
    <language>en_US</language>
</ListView>